# misc

./: LICENSE  README.md  Setup.hs  misc.cabal
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/flag-cache/: MonadRandom-0.4.2.3-b56bf149617e7d6016c795270952d56b  misc-0.1.0.0-306050838621a61ad0e9553148f5d857  misc-0.1.0.0-3beb8cc9b0df681cb8f7389c4037b68b  misc-0.1.0.0-4de9484684bd595507e2fd051eb1146f  misc-0.1.0.0-837adce4f870a2006b23821284969d6f  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  random-shuffle-0.0.4-03a1f89bfdd9bd36f1e304ce7869751b  transformers-compat-0.4.0.4-8aa4073730c676dbe210ea8bffd8d092
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/misc-0.1.0.0-1jHH4saeLkxEk3I2clXiJz/: libHSmisc-0.1.0.0-1jHH4saeLkxEk3I2clXiJz-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/misc-0.1.0.0-7jKk0pnbgs89KYe2GFy4TX/: libHSmisc-0.1.0.0-7jKk0pnbgs89KYe2GFy4TX-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/misc-0.1.0.0-9lvfJlds4sN391OSYOxn0u/: libHSmisc-0.1.0.0-9lvfJlds4sN391OSYOxn0u-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/pkgdb/: misc-0.1.0.0-3beb8cc9b0df681cb8f7389c4037b68b.conf  package.cache
doc/Misc/: DeBruijnSequence.md
src-main/: Main.hs
src-spec/: Spec.hs
src-spec/Data/String/: StripSpec.hs
src-spec/Misc/: DeBruijnSequenceSpec.hs  PermutationSpec.hs  ShuffleSpec.hs
src/Data/String/: Strip.hs
src/Misc/: DeBruijnSequence.hs  Permutation.hs  Shuffle.hs
(+10 files in other folders)
